# trade

./: .gitignore  Dockerfile  LICENSE  README.md  futu_fetch.py  futu_trader.py  pyproject.toml  requirement.txt  template.env  test.py  test_fund.py  track_and_trade.py
bitcoin/: cross_exchange.py
data/: aapl.csv  data.csv  us_stock.csv
dataloader/: BaseLoader.py  LongPort.py  Tushare.py  Yahoo.py  __init__.py  akshare_loader.py
doc/: fund_strategy.md  longport.md
fund_eval/: README.md  check_fund_estimation_data.py  data_provider.py  debug_fund_codes.py  fund_estimator.py  fund_eval.py  fund_info.csv  fund_info_with_estimation.csv  fund_strategy.py  schedule_estimator.sh  strategy_backtest.py  update_fund_info_with_estimation.py
futu_test/: test_futu_api.py  test_futu_trade.py
longport_bt/: __init__.py  longportbroker.py  longportdata.py  longportstore.py
longport_test/: account_asset.py  get_candlesticks.py  get_market_session.py  get_security_list.py  history_candlesticks.py  http_client.py  replace_order.py  submit_order.py  subscribe_candlesticks.py  subscribe_quote.py  test.py  today_orders.py
online_trader/: LongBridge.py  LongPortData.py  NetTrader.py  __init__.py  config.yaml  log.py  main.py
online_trader/orderbook/: OrderBook.py  __init__.py
online_trader/riskmanager/: ABC.py  __init__.py
statistics/: BaseStatistics.py  Cointegration.py  __init__.py
strategy/: DoubleSMA.py  MACD.py  MeanReversion.py  MeanReversionByStop.py  PairTrade.py  RSI_SMA.py  RSI_SMA_MACD.py  SimpleMovingAverage.py  StrategySelfBase.py  __init__.py  net_trade.py
(+5 files in other folders)
