[tool.poetry]
name = "trade"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
longport = "^3.0.8"
tushare = "^1.4.21"
matplotlib = "^3.10.3"
backtrader = "^1.9.78.123"
pandas = "^2.3.1"
yfinance = "^0.2.65"
statsmodels = "^0.14.5"
arch = "^7.2.0"
ccxt = "^4.4.94"
backtesting = "^0.6.4"
pandas-ta = "^0.3.14b0"
akshare = "^1.17.23"
python-dotenv = "^1.1.1"
futu-api = "^9.3.5308"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
